src/trusted/validator_arm/testdata/bad/invalid_sp_update.hex
# Load to SP without masking in the next instruction.
# The non-masking instruction is safe, but should be somewhere else.
e590d042  # ldral r13, [r0, #0x42]
e0800000  # add r0, r0, r0

# Writing SP using data processing op, without a following mask.
# The non-masking instruction is safe, but should be somewhere else.
e081d003  # addal r13, r1, r3
e0800000  # addal r0, r0, r0

# Writing SP using data processing op, with a mask that might not execute.
e081d003  # addal r13, r1, r3
03cdd480  # biceq r13, r13, #0x80000000
